--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
+    "add": "^2.0.6",
+    "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^6.0.3",
+    "plugin": "^0.3.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
